--- a/index.html
+++ b/index.html
@@ -136,7 +136,37 @@
 				</div>
 			</div>
 			<footer>
-			
+			<div>
+					<p class="footer-logo">
+					<img src="img/logo.png" alt="logo">
+					<span>Space-Z</span>
+					</p>
+					<p>
+					ООО «Космос Зэ». Все права защищены.
+					</p>
+				</div>
+					<div>
+				<h2>КОМПАНИЯ</h2>
+				<ul>
+				<li><a href="#">История</li>
+				<li><a href="#">Миссия</li>
+				<li><a href="#">Команда</li>
+				</ul>	</div>
+					<div>
+				<h2>КАТАЛОГ</h2>
+				<ul>
+				<li><a href="#">Полеты</a></li>
+				<li><a href="#">Проживание</a></li>
+				<li><a href="#">Экскурсии</a></li>
+				</ul></div>
+					<div>
+				<h2>КОНТАКТЫ</h2>
+				<ul>
+				<li><a href="#">Отправить заявку</a></li>
+				<li><a href="#">Схема проезда</a></li>
+				<li><a href="#">Время работы</a></li>
+				</ul>	
+					</div>
 			</footer>
 		</main>
 	</body>
